--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
-    <div class="main-container">
-       <header class="header">
-          <nav class="nav">
+    <div class="main-container" style="padding: 100px;">
+       <header class="header" style="display: flex;justify-content: space-between;background-color: blueviolet;">
+            <p style="cursor: pointer;">CARRA</p>
+          <nav class="nav" >
             <ul>
             <li>HOME</li>
             <li>CATEGORIES</li>
@@ -24,14 +25,14 @@
        <main class="main-container">
         <section>
          <p>ELEVATE YOUR SPACE $ EXPRESS YOUR STYLE</p>
-         <h1>WHERE EVERY DETAIL SPEAKS OF <span>Home</span></h1>
+         <h1>WHERE EVERY <br> DETAIL SPEAKS <br> OF <span style="border: 2px dashed rgb(182, 174, 174);">Home</span></h1>
          <div>
             
-            <button>Start Now</button>
+            <button style="padding: 25px; border: none; background-color: rgb(59, 58, 58); border-radius: 37px; width: 19%; color: white;">Start Now</button>
             <i class="fa-brands fa-youtube" style="color: #c3c1c1;"></i>
             <p style="display: inline;">Watch Video</p>
         </div>
-            <div>
+            <div style="display: flex; ">
                 <div>
                     <p>+758K</p>
                     <P>Item Disponible</P>
@@ -55,8 +56,8 @@
         <section>
 
         </section>
+        <h2>BEST SALLER:</h2>
         <section class="second-section">
-            <h2>BEST SALLER:</h2>
             <figure>
                 <div style="position: relative;">
                 <img src="./images/image1.jpg" alt=""> 
@@ -145,9 +146,40 @@
     <h1>REVIEWS & TESTIMONIALS</h1>
     <h6>Encourage you to share your opinions</h6>
        </main>
-       <footer>
+       <footer style="background-color: brown;">
+        <div>
+            <h2>CUSTOMER SERVICE</h2>
+            <p>Help & Contact Us</p>
+            <p>Returns & Refunds </p>
+            <p>ONLINE Store</p>
+            <p>Terma & Conditions</p>
+        </div>
+        <div>
+            <h2>COMPANY</h2>
+            <p>What We Do</p>
+            <p>Available Services</p>
+            <p>Latest Posts</p>
+            <p>FAQs</p>
+        </div>
+        <div>
+            <h2>SOCIAL MEDIA</h2>
+            <p>Twitter</p>
+            <p>Instagram</p>
+            <p>Facebook</p>
+            <p>Pinerset</p>
+        </div>
+        <div>
+            <h2>PROFILE</h2>
+            <p>My Account</p>
+            <p>Checkout</p>
+            <p>Order Tracking</p>
+            <p>Help & Support</p>
+        </div>
+        </footer>
+        <div style="display: flex;justify-content: space-between; margin-top: 80px;">
             <p>All Rights Reserved  Copyrights</p>
             <p>Carracompany.com</p>
+        </div>
     </div>
 </body>
 </html>
